--- a/vc/bfskraw/Release/py_module_tester.ipynb
+++ b/vc/bfskraw/Release/py_module_tester.ipynb
@@ -2,57 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5351ad93-551e-44a1-922f-0f980bb6f79e",
+   "execution_count": 1,
+   "id": "45d80aaf-613a-499c-8a57-346d8df94941",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "import bfsk"
+    "from bfsk.bfsk import DEV\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import clear_output, display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "a9de3502-9948-4b9d-be65-1d7c2c8b8a22",
+   "execution_count": 2,
+   "id": "6bf701be-d2c2-4d5f-91e3-4fef9bbba699",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1639802991.9641676"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "time.time()"
+    "d = DEV()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "51e2e376-b08c-4283-9a0d-d19a5777e6f8",
+   "execution_count": 3,
+   "id": "be9bb335-dd91-434f-b521-105313267c60",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'bfsk' has no attribute 'apFFT'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6160/3331694273.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbfsk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapFFT\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'bfsk' has no attribute 'apFFT'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bfsk.bfsk.DEV object at 0x18FC9BB0>\n"
      ]
     }
    ],
    "source": [
-    "bfsk.apFFT"
+    "print(d)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fdaf5869-33cd-4704-818c-9865b1c9ceae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#d.about()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1abd95da-82da-4c39-a580-a0bb1cef3b6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "daebf3a6-ca3a-4939-ae9d-20a99cdf3e9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.000"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    while 1:\n",
+    "        d.daq_bfsk(499)\n",
+    "        r = d.get_range(d.get_if0(), d.get_if1())\n",
+    "        clear_output(wait=True)\n",
+    "        print(f'{r:.3f}', end='', flush=True)\n",
+    "except KeyboardInterrupt:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b4e61b3-641d-48b7-ba44-3c66bed02500",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
