vc: bfskraw: ipynb: add plot output

--- a/vc/bfskraw/Release/py_module_tester.ipynb
+++ b/vc/bfskraw/Release/py_module_tester.ipynb
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bfsk.bfsk.DEV object at 0x18FC9BB0>\n"
+      "<bfsk.bfsk.DEV object at 0x192CA958>\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "daebf3a6-ca3a-4939-ae9d-20a99cdf3e9b",
    "metadata": {},
    "outputs": [
@@ -70,17 +70,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.000"
+      "20.765"
      ]
     }
    ],
    "source": [
+    "r_list = []\n",
     "try:\n",
     "    while 1:\n",
     "        d.daq_bfsk(499)\n",
     "        r = d.get_range(d.get_if0(), d.get_if1())\n",
+    "        r_list.append(r)\n",
     "        clear_output(wait=True)\n",
     "        print(f'{r:.3f}', end='', flush=True)\n",
+    "        plt.plot(r_list)\n",
+    "        plt.xlabel('x')\n",
+    "        plt.ylabel('y')\n",
+    "        plt.show()\n",
+    "        plt.pause(0.5)\n",
     "except KeyboardInterrupt:\n",
     "    pass"
    ]
@@ -88,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b4e61b3-641d-48b7-ba44-3c66bed02500",
+   "id": "4d98fe3e-655b-471a-a274-d4450a20d712",
    "metadata": {},
    "outputs": [],
    "source": []
