--- a/embedded/test_axf/MDK/output/ramcode/axf2bin.ipynb
+++ b/embedded/test_axf/MDK/output/ramcode/axf2bin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "68c04060-1b21-460f-891d-2a15f14b9e72",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "91af2ae7-d64c-4261-aa9e-ab8753f5bdea",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5cc7cca6-a1f7-44f4-9c70-c21dc5634363",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7943dbb2-47b0-47e4-b3ec-2c48ae75f6a1",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e39d3160-3cff-47ce-a32b-d8b60529034d",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7dbb16b3-36e5-4537-8286-ca3e6892dfa2",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c8e17d6d-45c8-439e-91d1-5a523a0525ae",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "deec6f9f-d698-40c3-8202-967e8c6e2189",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "225d104c-e475-4edc-afba-38f8545e38a8",
    "metadata": {},
    "outputs": [],
@@ -123,8 +123,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e711830-3665-4bb6-9930-88d71d2ea12a",
+   "metadata": {},
+   "source": [
+    "- sh_addr -->若section将载入内存, section的地址\n",
+    "- sh_offset -->Section的raw数据的文件偏移\n",
+    "- sh_size -->Section大小"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "265b8b6c-b096-4668-912c-3c3be03d38d8",
    "metadata": {},
    "outputs": [
@@ -359,8 +369,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a11cbf40-113d-4033-9770-a936b62e75cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('symtab.bin',\"wb+\") as file3:\n",
+    "    file3.write(bytearray(byte_list[17008:17008+3776]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b68e3857-ee54-4e84-a468-78855ca04cd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('shstrtab.bin',\"wb+\") as file4:\n",
+    "    file4.write(bytearray(byte_list[25460:25460+136]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ddbf33cf-33d2-4bc0-99ad-d2799eb9a957",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('strtab.bin',\"wb+\") as file5:\n",
+    "    file5.write(bytearray(byte_list[20784:20784+3400]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85514819-4cb3-408f-a5cf-0472a28d6a74",
    "metadata": {},
    "outputs": [],
    "source": []
