vc: bfskraw: add dir() output

--- a/vc/bfskraw/Release/py_module_tester.ipynb
+++ b/vc/bfskraw/Release/py_module_tester.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "45d80aaf-613a-499c-8a57-346d8df94941",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import bfsk.bfsk\n",
     "from bfsk.bfsk import DEV\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output, display"
@@ -14,7 +15,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "id": "fe14c864-2db3-4569-adcc-2f6ece18cdae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_DEV__read_raw',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'about',\n",
+       " 'daq_bfsk',\n",
+       " 'get_if0',\n",
+       " 'get_if1',\n",
+       " 'get_range',\n",
+       " 'open']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(bfsk.bfsk)\n",
+    "dir(bfsk.bfsk.DEV)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6bf701be-d2c2-4d5f-91e3-4fef9bbba699",
    "metadata": {},
    "outputs": [],
@@ -24,18 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "be9bb335-dd91-434f-b521-105313267c60",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<bfsk.bfsk.DEV object at 0x192CA958>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(d)"
    ]
