test_axf: add vaddr print

--- a/embedded/test_axf/MDK/output/ramcode/axf2bin.ipynb
+++ b/embedded/test_axf/MDK/output/ramcode/axf2bin.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "68c04060-1b21-460f-891d-2a15f14b9e72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "AXF_FILE_NAME = 'adc_03_sa_interrupt.axf'\n",
+    "AXF_FILE_NAME = 'ramcode.axf'\n",
     "BIN_FILE_NAME = 'output.bin'\n",
     "byte_list = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "91af2ae7-d64c-4261-aa9e-ab8753f5bdea",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5cc7cca6-a1f7-44f4-9c70-c21dc5634363",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "7943dbb2-47b0-47e4-b3ec-2c48ae75f6a1",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25596\n"
+      "214788\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e39d3160-3cff-47ce-a32b-d8b60529034d",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7dbb16b3-36e5-4537-8286-ca3e6892dfa2",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
+   "id": "9c0ade05-ba03-4985-99ee-2b5e3dd71676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_b = bytes(byte_list[program_header + 0x8:program_header + 0xC])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "80810d40-539d-45f5-a8c8-b6bca496781b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x1fff8000\n"
+     ]
+    }
+   ],
+   "source": [
+    "vaddr = int.from_bytes(temp_b, byteorder='little', signed=False)\n",
+    "print(hex(vaddr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "c8e17d6d-45c8-439e-91d1-5a523a0525ae",
    "metadata": {},
    "outputs": [],
@@ -94,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "deec6f9f-d698-40c3-8202-967e8c6e2189",
    "metadata": {},
    "outputs": [
@@ -102,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1296\n"
+      "22112\n"
      ]
     }
    ],
@@ -113,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "225d104c-e475-4edc-afba-38f8545e38a8",
    "metadata": {},
    "outputs": [],
@@ -134,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "265b8b6c-b096-4668-912c-3c3be03d38d8",
    "metadata": {},
    "outputs": [
@@ -148,9 +177,9 @@
       "e_machine:40\n",
       "e_version:1\n",
       "e_entry:536838785\n",
-      "e_phoff:25596\n",
-      "e_shoff:25628\n",
-      "e_flags:83887106\n",
+      "e_phoff:214788\n",
+      "e_shoff:214820\n",
+      "e_flags:83886082\n",
       "e_ehsize:52\n",
       "e_phentsize:32\n",
       "e_phnum:1\n",
@@ -178,10 +207,10 @@
       "sh_flags:6\n",
       "sh_addr:536838144\n",
       "sh_offset:56\n",
-      "sh_size:1280\n",
+      "sh_size:22084\n",
       "sh_link:0\n",
       "sh_info:0\n",
-      "sh_addralign:4\n",
+      "sh_addralign:8\n",
       "sh_entsize:0\n",
       "sh_name:b'ER_IROM1'\n",
       "\n",
@@ -190,8 +219,8 @@
       "sh_type:1\n",
       "sh_flags:3\n",
       "sh_addr:536870912\n",
-      "sh_offset:1336\n",
-      "sh_size:16\n",
+      "sh_offset:22144\n",
+      "sh_size:24\n",
       "sh_link:0\n",
       "sh_info:0\n",
       "sh_addralign:8\n",
@@ -202,9 +231,9 @@
       "sh_name_idx:10\n",
       "sh_type:8\n",
       "sh_flags:3\n",
-      "sh_addr:536870928\n",
-      "sh_offset:1352\n",
-      "sh_size:24584\n",
+      "sh_addr:536870936\n",
+      "sh_offset:22168\n",
+      "sh_size:25096\n",
       "sh_link:0\n",
       "sh_info:0\n",
       "sh_addralign:8\n",
@@ -216,8 +245,8 @@
       "sh_type:1\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:1352\n",
-      "sh_size:442\n",
+      "sh_offset:22168\n",
+      "sh_size:1448\n",
       "sh_link:0\n",
       "sh_info:0\n",
       "sh_addralign:1\n",
@@ -229,8 +258,8 @@
       "sh_type:1\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:1794\n",
-      "sh_size:652\n",
+      "sh_offset:23616\n",
+      "sh_size:5792\n",
       "sh_link:0\n",
       "sh_info:0\n",
       "sh_addralign:1\n",
@@ -242,8 +271,8 @@
       "sh_type:1\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:2446\n",
-      "sh_size:8586\n",
+      "sh_offset:29408\n",
+      "sh_size:104219\n",
       "sh_link:0\n",
       "sh_info:0\n",
       "sh_addralign:1\n",
@@ -255,8 +284,8 @@
       "sh_type:1\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:11032\n",
-      "sh_size:744\n",
+      "sh_offset:133627\n",
+      "sh_size:15764\n",
       "sh_link:0\n",
       "sh_info:0\n",
       "sh_addralign:1\n",
@@ -268,8 +297,8 @@
       "sh_type:1\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:11776\n",
-      "sh_size:5208\n",
+      "sh_offset:149391\n",
+      "sh_size:52711\n",
       "sh_link:0\n",
       "sh_info:0\n",
       "sh_addralign:1\n",
@@ -281,8 +310,8 @@
       "sh_type:1\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:16984\n",
-      "sh_size:24\n",
+      "sh_offset:202102\n",
+      "sh_size:1432\n",
       "sh_link:0\n",
       "sh_info:0\n",
       "sh_addralign:1\n",
@@ -294,10 +323,10 @@
       "sh_type:2\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:17008\n",
-      "sh_size:3776\n",
+      "sh_offset:203536\n",
+      "sh_size:5328\n",
       "sh_link:11\n",
-      "sh_info:53\n",
+      "sh_info:115\n",
       "sh_addralign:4\n",
       "sh_entsize:16\n",
       "sh_name:b'.symtab'\n",
@@ -307,8 +336,8 @@
       "sh_type:3\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:20784\n",
-      "sh_size:3400\n",
+      "sh_offset:208864\n",
+      "sh_size:4508\n",
       "sh_link:0\n",
       "sh_info:0\n",
       "sh_addralign:1\n",
@@ -320,7 +349,7 @@
       "sh_type:7\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:24184\n",
+      "sh_offset:213372\n",
       "sh_size:28\n",
       "sh_link:0\n",
       "sh_info:0\n",
@@ -333,8 +362,8 @@
       "sh_type:1\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:24212\n",
-      "sh_size:1248\n",
+      "sh_offset:213400\n",
+      "sh_size:1252\n",
       "sh_link:0\n",
       "sh_info:0\n",
       "sh_addralign:1\n",
@@ -346,7 +375,7 @@
       "sh_type:3\n",
       "sh_flags:0\n",
       "sh_addr:0\n",
-      "sh_offset:25460\n",
+      "sh_offset:214652\n",
       "sh_size:136\n",
       "sh_link:0\n",
       "sh_info:0\n",
